# OOP3

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: Figure.h.AB47C9C74B58394A.idx  figure.cpp.98C85FD8D9347885.idx  figure.h.8486CF170F5E2C8A.idx  main.cpp.51258902564D4E48.idx  rectangle.cpp.8B18823A2BFFA70E.idx  rectangle.h.594F9917B4614EB2.idx  rhombus.cpp.DEA65FCE86E6915A.idx  rhombus.h.06E253D89E8A344E.idx  tests01.cpp.5AE75ECD72826F64.idx  trapezoid.cpp.C0562B8D7E0DFAC5.idx  trapezoid.h.15CCBC2E95E0EBCC.idx
include/: Figure.h  rectangle.h  rhombus.h  trapezoid.h
src/: Figure.cpp  rectangle.cpp  rhombus.cpp  trapezoid.cpp
test/: tests01.cpp
